Day5/deployment-strategy/blue-green/hello-v1/hellov1-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-v1
    ver: "1.0"
  name: hello-v1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-v1
    ver: "1.0"
status:
  loadBalancer: {}
