Day5/deployment-strategy/blue-green/hello-v1/hello-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello
  name: hello
spec:
  port:
    targetPort: 8080
  to:
    kind: "Service"
    name: hello-v1
    weight: null
